tests/slice_bad_unsliceable_base.stderr
tests/slice_bad_unsliceable_base.sl:4:17: error: SL2004: type mismatch: cannot slice expression of type *i32
